--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/master_list_fragment"
+
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:name="com.example.android.android_me.ui.MasterListFragment"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     >
 
-</fragment>
+    <fragment
+        android:id="@+id/master_list_fragment"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:name="com.example.android.android_me.ui.MasterListFragment"
+        >
+
+    </fragment>
+
+    <include layout="@layout/activity_android_me"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
+        />
+
+</LinearLayout>
